added controller layer

--- a/MailerPro2/MailerPro2.MVC.csproj
+++ b/MailerPro2/MailerPro2.MVC.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AddressController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -237,6 +238,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Address\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -250,6 +252,16 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MailerPro2.Models\MailerPro2.Models.csproj">
+      <Project>{C3D88F24-D701-4B75-95B5-C66E2676C27E}</Project>
+      <Name>MailerPro2.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MailerPro2.Services\MailerPro2.Service.csproj">
+      <Project>{E0D87AA1-4ACE-40A7-8263-A93FDB46C33A}</Project>
+      <Name>MailerPro2.Service</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
