--- a/MailerPro2.Services/MailerPro2.Service.csproj
+++ b/MailerPro2.Services/MailerPro2.Service.csproj
@@ -54,7 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddressServices.cs" />
+    <Compile Include="AddressService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
