--- a/MailerPro2/MailerPro2.MVC.csproj
+++ b/MailerPro2/MailerPro2.MVC.csproj
@@ -235,10 +235,14 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Address\Index.cshtml" />
+    <Content Include="Views\Address\Create.cshtml" />
+    <Content Include="Views\Address\Details.cshtml" />
+    <Content Include="Views\Address\Edit.cshtml" />
+    <Content Include="Views\Address\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Address\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -254,6 +258,10 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MailerPro2.Data\MailerPro2.Data.csproj">
+      <Project>{919476DE-7A78-4188-A23C-A9EA81F58C48}</Project>
+      <Name>MailerPro2.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MailerPro2.Models\MailerPro2.Models.csproj">
       <Project>{C3D88F24-D701-4B75-95B5-C66E2676C27E}</Project>
       <Name>MailerPro2.Models</Name>
